# armory

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js  sqlx-data.json
.github/workflows/: clippy-fmt.yml  coverage.yml  linux.yml
armory/: all.html  constant.CACHE_AGE.html  constant.COMPILED_DATE.html  constant.GIT_COMMIT_HASH.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_NAME.html  constant.V1_API_ROUTES.html  constant.VERSION.html  fn.get_json_err.html  fn.main.html  index.html  sidebar-items.js  struct.Data.html  struct.SETTINGS.html  struct.SOURCE_FILES_OF_INSTANCE.html  struct.Settings.html  type.AppData.html
armory/api/: index.html
armory/data/: index.html  struct.Data.html
armory/routes/: index.html
armory/settings/: fn.check_url.html  fn.set_database_url.html  fn.set_from_database_url.html  index.html  struct.Database.html  struct.DatabaseBuilder.html  struct.Server.html  struct.Settings.html
config/: default.toml
implementors/lazy_static/: trait.LazyStatic.js
migrations/: 20211219135743_kavasam_users.sql  20211228144249_kavasam_reports.sql
src/: data.rs  main.rs  routes.rs  settings.rs  tests-migrate.rs
src/armory/: data.rs.html  main.rs.html  routes.rs.html  settings.rs.html
src/tests_migrate/: settings.rs.html  tests-migrate.rs.html
tests_migrate/: all.html  fn.build.html  fn.main.html  index.html  struct.SETTINGS.html  struct.Settings.html
tests_migrate/settings/: fn.check_url.html  fn.set_database_url.html  index.html  (+5 more)
(+39 files in other folders)
